added first page to portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 </head>
 <body>
     <header class="navbar border-bottom border-secondary">
-        <a href="#">Home</a>
+        <a href="#"><h3>Shweta</h3></a>
+        <div class=" float-right">
+            <a href="#"class="mx-2">Portfolio</a>
+            <a href="#"class="mx-2">About</a>
+            <a href="#"class="mx-2">Contact</a>
+        </div>  
     </header>
     <section class="quote d-flex flex-row">
         <div class="icons d-flex flex-column">
@@ -199,7 +204,7 @@
                 </div>
             </div>
         </div>
-
+        <br><br>
     </section>
     <br>
     <section class="container-fluid border-bottom border-secondary">
