removed linter errors

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <body>
     <header class="navbar border-bottom border-secondary p-0">
         <div class="d-flex flex-row">
-            <img src="./assets/1517501808720.jpeg" style="width: 80px; height: 80px;" class="rounded-circle m-0 p-0">
+            <img src="./assets/1517501808720.jpeg"  class="profile-image" alt="" rounded-circle m-0 p-0">
             <h3 style="padding-top: 2vh; padding-left: 1vw;" >Shweta</h3>
         </div>
         
         
         <div class=" float-right">
-            <a href="./index.html"class="mx-2">Portfolio</a>
+            <a href="./index.html" class="mx-2">Portfolio</a>
             <a href="#about"class="mx-2">About</a>
             <a class="collapsible mx-2">Contact</a>
             <div class="content">
@@ -45,9 +45,9 @@
     </header>
     <section class="quote d-flex flex-row">
         <div class="icons d-flex flex-column">
-            <a href="https://github.com/vidhishweta01"target="_blank"><i class="fa fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/vidhishweta01"target="_blank"><i class="fa fa-linkedin-square" ></i></a>
-            <a href="https://twitter.com/Vidhishweta01" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="https://github.com/vidhishweta01" target="blank"><i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/vidhishweta01 "target="blank"><i class="fa fa-linkedin-square" ></i></a>
+            <a href="https://twitter.com/Vidhishweta01" target="blank"><i class="fa fa-twitter"></i></a>
         </div>
         <div class="quote-text">
             <h1 class="quote-title">Hey There,</h1>
