removed linter errors

--- a/index.html
+++ b/index.html
@@ -102,19 +102,14 @@
             <div class="recent-project-image col-lg-6 col-md-12 col-sm-12"><img src="./assets/friendship_app.jpg" class="h-100 w-100" ></div>
             <div class="recent-project-info col-lg-6 col-md-12 col-sm-12">
                 <h2>Stay In Touch</h2>
-                <p>This project implements some feature of twitter and have three models in it user, following and tweets As a guest user:
-
+                <p> As a guest user:
                     able to create account/log in.
                     can see only “Sign in” and “Sign out” page.
                     As a logged-in user:
-                    
                     able to see all users list.
-                    able to see selected user page with their user name and all tweets written by them (the most recent tweets on the top).
-                    able to follow other users.
-                    can see a states for the followers and followings
-                    able to create new tweets (text only).
-                    able to see “Timeline” page with tweets (with number of likes and comments) written by me and all my friends (the most recent tweets on the top).
-                    Timeline page should be the root page of the app.
+                    able to see selected user page with their user name and all posts written by them (the most recent posts on the top).
+                    able to send friend request other users, reject friend request, accept request
+                    able to create post
                 </p>
                 <button>CSS</button>
                 <button>HTML</button>
@@ -131,7 +126,7 @@
           <div class="row justify-content-between">
             <div class="project-card col-sm-12 col-md-12 col-lg-4" style="background-image: url('./assets/Screenshot\ from\ 2021-06-07\ 12-47-59.png'); background-repeat: repeat-y; background-color: aliceblue;opacity: 0.85;">
                 <h2 class="font-weight-bolder">Private Event</h2>
-                <p class="font-weight-bold" style="text-shadow: white 1px 1px; font-size: 1vh">private Event which allows users to create events and then manage user signups. 
+                <p class="font-weight-bold">private Event which allows users to create events and then manage user signups. 
                     Users can create events and send invitations and parties. 
                     Events take place at a specific date and at a location .
                     A user can create events. A user can attend many events.
@@ -146,7 +141,7 @@
             </div>
             <div class="project-card col-sm-12 col-md-12 col-lg-4"style="background-image: url('./assets/Lines_background.png'); opacity: 0.85; border: ">
                 <h2 class="font-weight-bolder">Blog App</h2>
-                <p class="font-weight-bold"style="font-size: 1vh;" >An exclusive clubhouse where your members can write anonymous posts.
+                <p class="font-weight-bold" >An exclusive clubhouse where your members can write anonymous posts.
                      Inside the clubhouse, members can see who the author of a post is but, outside,
                       they can only see the story and wonder who wrote it.
                 </p>
@@ -159,7 +154,7 @@
             </div>
             <div class="project-card col-sm-12 col-md-12 col-lg-4"style="background-image: url('./assets/Lines_background.png'); background-repeat: no-repeat; opacity: 0.85; ">
                 <h2 class="font-weight-bolder">Ruby Linters</h2>
-                <p class="font-weight-bold" style="font-size: 1vh;">Its a customised linter for ruby.
+                <p class="font-weight-bold">Its a customised linter for ruby.
                     The whole idea of writing code to check another code is 
                     intriguing at the same time cognitively demanding. 
                     Building Linters for Ruby, the project provides 
