--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
         for (i = 0; i < coll.length; i++) {
           coll[i].addEventListener("click", function() {
-            this.classList.toggle("active");info-form
+            this.classList.toggle("active");
             var content = this.nextElementSibling;
             if (content.style.display === "block") {
               content.style.display = "none";
@@ -266,3 +266,4 @@
         </script>
         
 </body>
+</html>
