added responsiveness for moobile

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+
     <header class="navbar border-bottom border-secondary p-0">
-        <div class="d-flex flex-row">
-            <img src="./assets/1517501808720.jpeg"  class="profile-image" alt="" rounded-circle m-0 p-0">
-            <h3 style="padding-top: 2vh; padding-left: 1vw;" >Shweta</h3>
+        <div class="image-div d-flex flex-row">
+            <img src="./assets/1517501808720.jpeg"  class="profile-image rounded-circle" alt="">
+            <h3 class="image-heading">Shweta</h3>
         </div>
-        
-        
-        <div class=" float-right">
+
+        <div class="nav-right float-right">
             <a href="./index.html" class="mx-2">Portfolio</a>
             <a href="#about"class="mx-2">About</a>
             <a class="collapsible mx-2">Contact</a>
