added updated resume

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       If you like what you see and have a project you need coded,
                        don’t hestiate to contact me.
                 </p>
-                <button class=" bg-danger w-lg-50 w-md-50"><a href="./assets/My Resume - Google Docs.pdf" class="text-decoration-none text-light">Get my Resume</a></button>
+                <button class=" bg-danger w-lg-50 w-md-50"><a href="./assets/MyResume-GoogleDocs.pdf" class="text-decoration-none text-light">Get my Resume</a></button>
             </div> 
             <div class="about-me-image" ><img src="./assets/algo1.jpg" class="rounded-circle"style="width: 90%; height: 90%;"></div>
         </div>
