--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
     </section>
     <br>
     <footer class="container-fluid w-lg-25 w-md-25 w-sm-50">
-        <div class="icon-footer d-flex flex-row justify-content-between">
-            <a href="https://github.com/vidhishweta01"><i class="fa fa-github mr-1 ml-0"></i></a>
-            <a href="https://www.linkedin.com/in/vidhishweta01"><i class="fa fa-linkedin-square mx-1" ></i></a>
-            <a href="https://twitter.com/Vidhishweta01"><i class="fa fa-twitter ml-1"></i></a>
+        <div class="icon-footer d-flex flex-row justify-content-center">
+            <a href="https://github.com/vidhishweta01" class="mx-lg-3 px-lg-3"><i class="fa fa-github mx-3 px-3"></i></a>
+            <a href="https://www.linkedin.com/in/vidhishweta01" class="mx-lg-3 px-lg-3"><i class="fa fa-linkedin-square mx-3 px-3" ></i></a>
+            <a href="https://twitter.com/Vidhishweta01" class="mx-lg-3 px-lg-3"><i class="fa fa-twitter mx-3 px-3"></i></a>
         </div>  
     </footer>
     <script>
